finished profile, sort of

--- a/dokumentti/template-fi.tex
+++ b/dokumentti/template-fi.tex
@@ -250,8 +250,11 @@ Edellisessä esimerkissä on poimittu ainoastaan muutamia toiminnallisia määri
 
 \subsubsection{Toimintaa kuvaavat ominaisuudet}
 
+Edellisessä aliluvussa luettelimme palvelun toiminnallisia ominaisuuksia.
 
+Ontologiassa on myös mahdollista ilmoittaa palvelun luokitus jossain ontologiassa määriteltyä, mahdollisesti ulkopuolista luokitusta tai taksonomiaa käyttäen. Luokitus ilmaistaan \texttt{serviceCategory}-tagien sisällä ja arvo on \texttt{ServiceCategory}-luokan ilmentymän.  \texttt{ServiceCategory} luokalla on ominaisuuksia kategorian nimen, koodin jne ilmaisuun. ESIMERKKI?
 
+Profiilissa voidaan myös ilmaista palvelun tarjoajan tärkeäksi kokemia vapaavalintaisia attribuutteja \texttt{serviceParameter}-ominaisuudella. Parametrille annetaan aina nimi, joka on datatyyppiominaisuus sekä arvo, joka on jonkin olion instanssi. Esimerkiksi palvelulle voidaan määritellä ominaisuus ''BravoAir Geographic Radius'' ja se saa arvoksen ontologiassa määritetyn alueen \texttt{jenkkilä}.
 
 \subsection{Prosessi}
 
