--- a/dokumentti/references-fi.bib
+++ b/dokumentti/references-fi.bib
@@ -1,4 +1,13 @@
 
+@misc{WSDL, 
+title={Web Service Definition Language (WSDL)}, 
+volume={2008}, 
+url={http://www.w3.org/TR/wsdl}, 
+number={31-05}, 
+journal={W3C}, 
+publisher={WC3}, 
+author={Christensen, Erik and Curbera, Francisco and Meredith, Greg and Weerawarana, Sanjiva}, year={2001}}
+
  @inbook{pitfalls, 
   title={Pitfalls of OWL-S: a practical semantic web use case}, 
   url={http://portal.acm.org/citation.cfm?id=1035167.1035209}, 
