--- a/dokumentti/references-fi.bib
+++ b/dokumentti/references-fi.bib
@@ -17,7 +17,7 @@ author={Christensen, Erik and Curbera, Francisco and Meredith, Greg and Weerawar
   year={2004}, 
   pages={289–298}}
 
-  @article{semantics_to_webservices, 
+  @article{with_owls, 
   title={Bringing Semantics to Web Services with OWL-S}, 
   volume={10}, 
   url={http://www.springerlink.com/index/10.1007/s11280-007-0033-x}, 
