--- a/dokumentti/references-fi.bib
+++ b/dokumentti/references-fi.bib
@@ -1,4 +1,38 @@
 
+@article{RDFS, 
+title={RDF Vocabulary Description Language 1.0: RDF Schema}, 
+volume={2009}, 
+url={http://www.w3.org/TR/rdf-schema/}, 
+number={10 February 2004}, 
+journal={W3C Recommendation}, 
+publisher={W3C}, 
+author={Brickley, Dan and Guha, R V}, 
+editor={McBride, BrianEditor}, 
+year={2004}}
+
+@article{RDFP, 
+title={RDF Primer}, 
+volume={10}, 
+url={http://www.w3.org/TR/rdf-primer/}, 
+number={February}, 
+journal={W3C Recommendation}, 
+publisher={W3C}, 
+author={Manola, Frank and Miller, Eric}, 
+editor={Manola, Frank and Miller, EricEditors}, 
+year={2004}, 
+pages={1--107}}
+
+@article{owlguide, 
+title={OWL Web Ontology Language Guide}, 
+volume={10}, 
+url={http://www.w3.org/TR/owl-guide/}, 
+number={February}, 
+journal={W3C Recommendation}, 
+publisher={The World Wide Web Consortium (W3C)}, 
+author={Smith, Michael K and Welty, Chris and McGuinness, Deborah L}, 
+year={2004}, 
+pages={1--46}}
+
 @misc{WSDL, 
 title={Web Service Definition Language (WSDL)}, 
 volume={2008}, 
