--- a/dokumentti/template-fi.tex
+++ b/dokumentti/template-fi.tex
@@ -162,44 +162,65 @@ ESIMERKKI
 
 Esimerkistä voimme havaita, että kuvailtava asia on subjekti nimeltään \textit{matti}, jota kuvataan suhteella \textit{veli} joka saa arvokseen \textit{teppo}. Tämänkaltainen XML-kielinen notaatio on OWL:n (ja OWL-S:n) ontologioiden kuvaamisen syntaktinen ydin. Pelkkä RDF -syntaksi ei kuitenkaan riitä, koska ontologioiden (semantiikoiden) kuvaamiseen tarvitaan myös monimutkaisempia abstraktioita, kuten \textit{luokka}, \textit{aliluokka}, \textit{ilmentymä}, \textit{suhde} ja \textit{alisuhde}. Nämä konstruktiot tarjoaa RDF:n semanttinen laajennos RDF Schema (RDFS) sekä OWL, joka käyttää suurta osaa RDFS:n konstruktioita lähes sellaisenaan.  Seuraavassa kappaleessa käyn läpi pintapuolisesti RDFS:n ja OWL:n konstruktiot, jotka auttavat ymmärtämään OWL-S -ontologian rakenteen.
 
-\subsection{OWL- ja RDFS -ontologiat}
+\subsection{OWL -ontologiat}
 
-RDF Schema mahdollistaa yksinkertaisten ontologioiden muodostamisen \cite{RDFS}. RDFS:llä on mahdollista määrittää resurssien joukkoja luokiksi (\textit{class}). Luokalla voi olla aliluokkia(\textit{subclass}) ja luokkien jäsenet ovat ilmentymiä (\textit{instance}). Ilmentymien välisiä suhteita kutsutaan \textit{suhteiksi} ja suhteilla on myös \textit{alisuhteita}. Seuraavassa esimerkissä kuvataan ontologia, joka käsittelee polkupyörien valmistajia. Resurssi \textit{Surly} kuuluu luokkaan (\texttt{rdfs:Class})\textit{Polkupyöräpaja}. Luokkaan kuuluminen ilmaistaan \texttt{rdf:type} -konstruktiolla:
+OWL(ja RDFS) mahdollistaa ontologioiden muodostamisen. Tässä kappaleessa käsitellään OWL:n peruskonstruktiot, joiden avulla OWL-S:n ontologiat ovat ymmärrettävissä. OWL käyttää useita RDFS:n konstruktioita, jotka tunnistaa etuliitteestä \texttt{rdfs:}.
+
+OWL:lla on mahdollista määrittää resurssien joukkoja luokiksi (\textit{class}). Luokalla voi olla aliluokkia(\textit{subclass}) ja luokkien jäsenet ovat ilmentymiä (\textit{instance}). Ilmentymiä voidaan kuvata \textit{suhteilla}, joilla voi olla myös \textit{alisuhteita}\cite{owlguide}. Seuraavassa polkupyörän valmistajaa kuvaavassa esimerkissä käydään läpi ontologian peruskonstruktioita. 
+
+Resurssi \textit{Surly} kuuluu luokkaan \textit{Polkupyöräpaja}. Luokkaan kuuluminen ilmaistaan \texttt{rdf:type} -konstruktiolla:
 
 \begin{verbatim}
-    <rdfs:Class rdf:ID="Surly" />
-        <rdf:type rdf:resource="Polkupyorapaja"/>
-    </rdfs:Class>
-\end{verbatim}
+<owl:Thing rdf:ID="Surly"/>
+
+<owl:Thing rdf:about="Surly">
+    <rdf:type= rdf:resource="Polkupyorapaja"/>
+</owl:Thing>
+\end{verbatim} 
 
 \textit{Polkupyorapaja} on luokan \textit{Liikeyritys} aliluokka ja ilmaistaan konstruktiolla \texttt{subClassOf}: 
 
 \begin{verbatim}
-    <rdfs:Class rdf:ID="Polkupyorapaja" />
-        <rdf:subClassOf rdf:resource="Liikeyritys"/>
-    </rdfs:Class>
+<owl:Class rdf:ID="Polkupyöräpaja">
+    <rdfs:subClassOf rdf:resource="Liikeyritys"/>
+</owl:Class>
 \end{verbatim}
 
+Resursseja kuvataan \textit{ominaisuuksilla}. Ominaisuuksilla voi olla \textit{aliominaisuuksia}. Ominaisuus voi viitata joko olioon (luokkaominaisuus) tai arvoliteraalin (datatyyppiominaisuus). Ominaisuuden sovellusalue ilmaistaan \texttt{rdfs:domain} -konstruktiolla ja arvojoukko \texttt{rdfs:range} -konstruktiolla. Seuraavassa esimerkissä 
+määritellään luokan \textit{Polkupyorapaja} luokkaominaisuus \textit{Sijaitsee}, joka voi saada arvoksi luokan \textit{Kaupunki} ilmentymiä.
 
+\begin{verbatim}
+    <owl:ObjectProperty rdf:about="Sijaitsee">
+        <rdfs:domain rdf:resource="Polkupyorapaja" />
+        <rdfs:range rdf:resource="Kaupunki" />
+    </owl:ObjectProperty>
+\end{verbatim}
 
+\textit{Polkupyöräpaja}lle voidaan määritellä myös datatyyppiominaisuus \textit{postinumero}, joka voi saada arvokseen XMLSchemassa määritetyn arvon \textit{integer}:
 
+\begin{verbatim}
+<owl:DataTypeProperty rdf:ID="Postinumero">
+    <rdfs:domain rdf:resource="Polkupyorapaja"/>
+    <rdfs:range  rdf:resource="&xsd;integer"/>   
+<owl:dataTypeProperty>
+\end{verbatim}
 
-instanssi
+Samoin kuin luokalla voi olla aliluokka, ominaisuudella voi olla aliominaisuus. Esimerkiksi ominaisuus \texttt{Sijaitsee} voi olla ominaisuuden \texttt{Yritystieto} aliominaisuus. Aliominaisuus
+määritellään \texttt{subPropertyOf}-konstruktiolla:
 
-suhde
+\begin{verbatim}
+<owl:ObjectProperty rdf:ID="Sijaitsee">
+    <rdfs:subPropertyOf rdf:resource="yritystieto">
+    . . .
+<owl:ObjectTypeProperty>
+\end{verbatim}
 
-aliluokka
+Edellä on lyhyin esimerkein käyty läpi OWL:n peruskonstruktioita. OWL tarjoaa myös lukuisan joukon muita konstruktioita, jotka mahdollistavat monipuolisten ontologioiden muodostamisen. Seuraavassa listassa muutamia OWL-S -määrittelyissä vastaan tulevia:
 
-alisuhde
-
-import
-
-union
-
-disjointWith
-
-risuaitaviittaukset
-
+\begin{itemize}
+ \item \textbf{kardinaalisuusrajoitteet}. Ominaisuudelle voidaan määrätä kardinaalisuusrajoitteita tietyissä sovelluskonteksteissa. Voidaan esimerkiki määritellä, että luokka \textit{Polkupyörä} on joukko asioita, jolla on tasan kaksi \textit{Renkaat} ominaisuutta.
+  \item \textbf{kompleksiset luokat}. OWL mahdollistaa joukko-opilliset operaatiot luokkia muosostettaessa. Voidaan esimerkiksi määritellä, että luokka \textit{Polkupyörä} on luokkien \textit{maastopyörä} ja \textit{maantiepyörä} edustajien yhdiste, unioni. Owl mahdollistaa myös ilmentymäjoukkojen leikkaukset ja komplementit. 
+\end{itemize}
 
 \section{Webpalveluiden kuvauskieli OWL-S}
 
@@ -513,6 +534,10 @@ WSDL:n operaatiomäärityksiä ei voi sisällyttää tähän raporttiin joten ni
 
 \item \texttt{wsdlOutput} ja \texttt{wsdlOutputMessage} toimivat vastaavasti kuin edelliset, mutta MÄPPÄÄVÄT prosessin paluuarvoja.
 \end{itemize}
+
+\section{Päätelmiä}
+
+
 
 
 % --- Back matter ---
